@@ -17,68 +17,77 @@
 package com.echothree.control.user.party.server.command;
 
 import com.echothree.control.user.party.common.form.GetDepartmentForm;
-import com.echothree.control.user.party.common.result.GetDepartmentResult;
 import com.echothree.control.user.party.common.result.PartyResultFactory;
 import com.echothree.model.control.core.common.EventTypes;
+import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.party.server.control.PartyControl;
-import com.echothree.model.control.party.server.logic.CompanyLogic;
 import com.echothree.model.control.party.server.logic.DepartmentLogic;
-import com.echothree.model.control.party.server.logic.DivisionLogic;
-import com.echothree.model.data.party.server.entity.PartyCompany;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.party.server.entity.PartyDepartment;
-import com.echothree.model.data.party.server.entity.PartyDivision;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
+import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class GetDepartmentCommand
-        extends BaseSimpleCommand<GetDepartmentForm> {
+        extends BaseSingleEntityCommand<PartyDepartment, GetDepartmentForm> {
 
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.Department.name(), SecurityRoles.Review.name())
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("CompanyName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("DivisionName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("DepartmentName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("PartyName", FieldType.ENTITY_NAME, false, null, null)
-                ));
+        );
     }
 
     /** Creates a new instance of GetDepartmentCommand */
     public GetDepartmentCommand(UserVisitPK userVisitPK, GetDepartmentForm form) {
-        super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, true);
+        super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
+    }
+
+
+    @Override
+    protected PartyDepartment getEntity() {
+        var companyName = form.getCompanyName();
+        var divisionName = form.getDivisionName();
+        var departmentName = form.getDepartmentName();
+        var partyName = form.getPartyName();
+        var partyDepartment = DepartmentLogic.getInstance().getPartyDepartmentByName(this, companyName,
+                divisionName, departmentName, partyName, form, true);
+
+        if(partyDepartment != null) {
+            sendEventUsingNames(partyDepartment.getPartyPK(), EventTypes.READ.name(), null, null, getPartyPK());
+        }
+
+        return partyDepartment;
     }
 
     @Override
-    protected BaseResult execute() {
-        GetDepartmentResult result = PartyResultFactory.getGetDepartmentResult();
-        String companyName = form.getCompanyName();
-        PartyCompany partyCompany = CompanyLogic.getInstance().getPartyCompanyByName(this, companyName, null, null, false);
+    protected BaseResult getTransfer(PartyDepartment partyDepartment) {
+        var result = PartyResultFactory.getGetDepartmentResult();
 
-        if(!hasExecutionErrors()) {
-            String divisionName = form.getDivisionName();
-            PartyDivision partyDivision = DivisionLogic.getInstance().getPartyDivisionByName(this, partyCompany == null ? null : partyCompany.getParty(), divisionName, null, null, false);
+        if(partyDepartment != null) {
+            var partyControl = Session.getModelController(PartyControl.class);
 
-            if(!hasExecutionErrors()) {
-                String departmentName = form.getDepartmentName();
-                String partyName = form.getPartyName();
-                PartyDepartment partyDepartment = DepartmentLogic.getInstance().getPartyDepartmentByName(this, partyDivision == null ? null : partyDivision.getParty(), departmentName, partyName, true);
-
-                if(!hasExecutionErrors()) {
-                    var partyControl = Session.getModelController(PartyControl.class);
-
-                    result.setDepartment(partyControl.getDepartmentTransfer(getUserVisit(), partyDepartment));
-
-                    sendEventUsingNames(partyDepartment.getPartyPK(), EventTypes.READ.name(), null, null, getPartyPK());
-                }
-            }
+            result.setDepartment(partyControl.getDepartmentTransfer(getUserVisit(), partyDepartment));
         }
 
         return result;
