@@ -17,68 +17,87 @@
 package com.echothree.control.user.party.server.command;
 
 import com.echothree.control.user.party.common.form.GetDepartmentsForm;
-import com.echothree.control.user.party.common.result.GetDepartmentsResult;
 import com.echothree.control.user.party.common.result.PartyResultFactory;
+import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.party.server.control.PartyControl;
-import com.echothree.model.data.party.server.entity.Party;
-import com.echothree.model.data.party.server.entity.PartyCompany;
+import com.echothree.model.control.party.server.logic.DivisionLogic;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
+import com.echothree.model.data.party.server.entity.PartyDepartment;
 import com.echothree.model.data.party.server.entity.PartyDivision;
+import com.echothree.model.data.party.server.factory.PartyDepartmentFactory;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.model.data.user.server.entity.UserVisit;
-import com.echothree.util.common.message.ExecutionErrors;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
+import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetDepartmentsCommand
-        extends BaseSimpleCommand<GetDepartmentsForm> {
+        extends BaseMultipleEntitiesCommand<PartyDepartment, GetDepartmentsForm> {
 
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.Department.name(), SecurityRoles.List.name())
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("CompanyName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("DivisionName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetDepartmentsCommand */
     public GetDepartmentsCommand(UserVisitPK userVisitPK, GetDepartmentsForm form) {
-        super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, true);
+        super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
     
+    PartyDivision partyDivision;
+
     @Override
-    protected BaseResult execute() {
-        GetDepartmentsResult result = PartyResultFactory.getGetDepartmentsResult();
-        var partyControl = Session.getModelController(PartyControl.class);
-        String companyName = form.getCompanyName();
-        PartyCompany partyCompany = partyControl.getPartyCompanyByName(companyName);
-        
-        if(partyCompany != null) {
-            Party companyParty = partyCompany.getParty();
-            UserVisit userVisit = getUserVisit();
-            String divisionName = form.getDivisionName();
-            PartyDivision partyDivision = partyControl.getPartyDivisionByName(companyParty, divisionName);
-            
-            result.setCompany(partyControl.getCompanyTransfer(userVisit, companyParty));
-            
-            if(partyDivision != null) {
-                Party divisionParty = partyDivision.getParty();
-                
-                result.setDivision(partyControl.getDivisionTransfer(userVisit, partyDivision));
-                result.setDepartments(partyControl.getDepartmentTransfersByDivision(userVisit, divisionParty));
-            } else {
-                addExecutionError(ExecutionErrors.UnknownDivisionName.name(), divisionName);
-            }
-        } else {
-            addExecutionError(ExecutionErrors.UnknownCompanyName.name(), companyName);
+    protected Collection<PartyDepartment> getEntities() {
+        var companyName = form.getCompanyName();
+        var divisionName = form.getDivisionName();
+        Collection<PartyDepartment> partyDepartments = null;
+
+        partyDivision = DivisionLogic.getInstance().getPartyDivisionByName(this, companyName, divisionName, null, null, true);
+
+        if(!hasExecutionErrors()) {
+            var partyControl = Session.getModelController(PartyControl.class);
+
+            partyDepartments = partyControl.getDepartmentsByDivision(partyDivision.getParty());
         }
-        
+
+        return partyDepartments;
+    }
+
+    @Override
+    protected BaseResult getTransfers(Collection<PartyDepartment> entities) {
+        var result = PartyResultFactory.getGetDepartmentsResult();
+
+        if(entities != null) {
+            var partyControl = Session.getModelController(PartyControl.class);
+            var userVisit = getUserVisit();
+
+            if(session.hasLimit(PartyDepartmentFactory.class)) {
+                result.setDepartmentCount(partyControl.countPartyDepartments(partyDivision.getParty()));
+            }
+
+            result.setDivision(partyControl.getDivisionTransfer(userVisit, partyDivision));
+            result.setDepartments(partyControl.getDepartmentTransfers(userVisit, entities));
+        }
+
         return result;
     }
     
